# COPAL-code

./: .gitignore  CITATION.cff  LICENSE  README.md  model_name.json  pyproject.toml
config/: openrouter_model_map.example.json
copal/: adjudication_frontend.py  adjudication_translation.py  chatbot_adapters.py  checkpoints.py  cli.py  config.py  construction_quality_validation.py  data_sources.py  experiment_analysis.py  fast_pilot.py  fast_pilot_ablation.py  framework.py  io.py  live_validation.py  llm.py  llm_human_validation.py  manifest_compat.py  models.py  policy_perturbation.py  table2_ablation.py  table3_model_eval.py  taxonomy.py
docs/: FRAMEWORK.md  REPRODUCIBILITY.md
examples/: mock_chatbot.py  policy_worlds.jsonl  system_prompts.jsonl
paper_final/: README.md
scripts/: build_construction_quality_adjudication_frontend.py  export_paper_artifacts.py  export_paper_dataset.py  run_copal_framework.py  run_copal_release.py  run_fast_generation_pilot.py  run_paired_single_composed_from_table2.py  run_paired_single_composed_from_table3.py  run_table2_ablation_pilot.py  run_table3_judge_sensitivity.py  run_table3_model_eval.py
tests/: test_adjudication_frontend.py  test_adjudication_translation.py  test_baseline_experiment_stage.py  test_checkpoints.py  test_cli_e2e_smoke.py  test_composition_and_validation_stage.py  test_config_and_data_sources.py  test_construction_quality_validation.py  test_difficulty_screening_stage.py  test_evaluation_stage.py  test_experiment_cli.py  test_fast_pilot_ablation.py  test_fast_pilot_pipeline.py  test_framework_adapters.py  (+15 more)
(+78 files in other folders)
