[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copal"
version = "0.1.0"
description = "COPAL: composed-policy benchmark construction and evaluation pipeline"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
  "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
copal = "copal.cli:main"

[tool.setuptools.packages.find]
include = ["copal*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
